--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -40,6 +40,7 @@
   display: flex;
   flex-direction: column;
   font-size: 0.9em;
+  box-sizing: border-box;
 
   .contact-phone {
     display: flex;
@@ -50,29 +51,68 @@
     border: 1px solid black;
     border-radius: 4px;
     align-items: center;
+    justify-content: center;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+
+    .phoneNumber {
+      width: fit-content;
+      display: flex;
+      justify-content: center;
+    }
+
+    div {
+      width: fit-content;
+    }
   }
 
-    .contact-email {
+  .contact-email {
+    display: flex;
+    font-family: "Montserrat";
+    font-weight: bold;
+    line-height: 1.5em;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+
+    .email {
+      width: fit-content;
       display: flex;
-      font-family: "Montserrat";
-      font-weight: bold;
-      line-height: 1.5em;
-      text-align: center;
-      border: 1px solid black;
-      border-radius: 4px;
-      align-items: center;
+      justify-content: center;
     }
 
-    .contact-info {
-      display: flex;
-      font-family: "Montserrat";
-      font-weight: bold;
-      line-height: 1.5em;
-      text-align: center;
-      border: 1px solid black;
-      border-radius: 4px;
-      align-items: center;
+    div {
+      width: fit-content;
     }
+  }
+
+  .contact-info {
+    display: flex;
+    font-family: "Montserrat";
+    font-weight: bold;
+    line-height: 1.5em;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+
+    .from {
+      width: fit-content;
+      display: flex;
+      justify-content: center;
+    }
+
+    div {
+      width: fit-content;
+    }
+  }
 }
 
 .footer {
@@ -155,54 +195,18 @@
       display: flex;
       justify-content: center;
       text-align: center;
-      padding-top: .2em;
-      padding-bottom: .2em;
-
-      .phoneNumber {
-        width: fit-content;
-        display: flex;
-        justify-content: center;
-      }
-
-      div {
-        width: fit-content;
-      }
     }
     .contact-email {
       margin-bottom: 1em;
       display: flex;
       justify-content: center;
       text-align: center;
-      padding-top: .2em;
-      padding-bottom: .2em;
-
-      .email {
-        width: fit-content;
-        display: flex;
-        justify-content: center;
-      }
-
-      div {
-        width: fit-content;
-      }
     }
 
     .contact-info {
       display: flex;
       justify-content: center;
       text-align: center;
-      padding-top: .2em;
-      padding-bottom: .2em;
-      
-      .from {
-        width: fit-content;
-        display: flex;
-        justify-content: center;
-      }
-
-      div {
-        width: fit-content;
-      }
     }
   }
 }
@@ -217,7 +221,15 @@
   }
 
   .information {
-    .contact-info {
+    padding-left: 1em;
+    padding-right: 1em;
+    flex-direction: row;
+    .contact-phone {
+      margin-right: 1em;
+    }
+
+    .contact-email {
+      margin-right: 1em;
     }
   }
 
@@ -229,9 +241,15 @@
 //desktop
 @media only screen and (min-width: 961px) {
   .information {
+    padding-left: 3em;
+    padding-right: 3em;
+    flex-direction: row;
+    .contact-phone {
+      margin-right: 1em;
+    }
 
-    .contact-info {
-
+    .contact-email {
+      margin-right: 1em;
     }
   }
 
