--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -59,6 +59,15 @@
   }
 }
 
+.about-content {
+  .about-me {
+    h1 {
+      letter-spacing: 0.5em;
+      text-align: center;
+    }
+  }
+}
+
 //phones
 @media only screen and (max-width: 425px) {
   .aboutMe {
